error_templates/java/test_files/public_class_filename_mismatch_error/test.txt
template: "Java.PublicClassFilenameMismatchError"
---
Wrong.java:1: error: class Right is public, should be declared in a file named Right.java
    public class Right {
            ^
    1 error
===
template: "Java.PublicClassFilenameMismatchError"
---
Your program attempted to access an element in index 5 on an array that has only 4 items
